Made some modifications to the header section.
However, it messes with the functionality of the other features on the Task View page. Will need to modify further. Added the header code as a comment to work on later.

--- a/src/frontend/src/app/pages/task-view/task-view.component.html
+++ b/src/frontend/src/app/pages/task-view/task-view.component.html
@@ -1,3 +1,30 @@
+<!-- Header -->
+<!-- <header class="header">
+    <nav class="navbar container">
+        <a href="./task-view.component.html">
+            <h2 class="logo">Zhen</h2>
+        </a>
+
+        <div class="menu">
+            <ul class="list">
+                <li class="list-item">
+                    <a href="" class="list-link current">Home</a>
+                </li>
+                <li class="list-item">
+                    <a href="" class="list-link">About us</a>
+                </li>
+                <li class="list-item">
+                    <a href="" class="list-link">Sign in</a>
+                </li>
+                <li class="list-item">
+                    <a href="" class="list-link">Sign up</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header> -->
+
+<!-- Task View Page -->
 <div class="centered-content">
     <div class="task-manager-container">
         <div class="sidebar has-background-white">
@@ -10,10 +37,10 @@
                     <p>List 1</p>
                 </a>
                 <a class="list-menu-item">
-                    <p>List 1</p>
+                    <p>List 2</p>
                 </a>
                 <a class="list-menu-item">
-                    <p>List 1</p>
+                    <p>List 3</p>
                 </a>
             </div>
 
@@ -26,13 +53,13 @@
             </h1> 
 
             <div class="task">
-                <p>This is something I have to do</p>
+                <p>Task description</p>
             </div>
             <div class="task complete">
-                <p>This is something I have to do</p>
+                <p>Task description</p>
             </div>
             <div class="task">
-                <p>This is something I have to do</p>
+                <p>Task description</p>
             </div>
         </div>
     </div>
