--- a/src/frontend/src/app/pages/task-view/task-view.component.scss
+++ b/src/frontend/src/app/pages/task-view/task-view.component.scss
@@ -1,5 +1,55 @@
 @import '../../../main-styles.scss';
 
+//Header
+// .header {
+//     background-color: transparent;
+//     position: fixed;
+//     top: 0;
+//     bottom: 0;
+//     width: 100%;
+//     z-index: 999;
+// }
+
+// .navbar{
+//     display: flex;
+//     align-items: center;
+//     justify-content: space-between;
+//     padding-block: 1.5rem;
+// }
+
+// .list {
+//     display: flex;
+//     align-items: center;
+//     gap: 2rem;
+// }
+
+// .list-link.current{
+//     color: $gold;
+// }
+
+// .list-link:hover{
+//     color: $darkgold;
+// }
+
+// .logo {
+//     font-family: 'Raleway', sans-serif;
+//     font-size: 2rem;
+//     font-weight: 700;
+//     color: $lightgold;
+//     text-decoration: none;
+//     text-transform: lowercase;
+// }
+
+// .container{
+//     display: flex;
+//     max-width: 160rem;
+//     margin: 0 auto;
+//     padding: 0 1.5rem;
+//     background-color: transparent;
+// }
+
+
+// Task View Page
 .centered-content {
     display: flex;
     justify-content: center;
